fix jumpy slider in av
git-svn-id: http://dev.geogebra.org/svn/trunk/geogebra@56362 23ce0884-8a58-47d3-bc5c-ddf1cd5b9f9e

--- a/web/src/main/resources/org/geogebra/web/resources/scss/av-styles.scss
+++ b/web/src/main/resources/org/geogebra/web/resources/scss/av-styles.scss
@@ -419,7 +419,7 @@ $duration: 0.2s;
 			padding-top: 0px;
 			
 			.panelRow {
-				padding-top: 0px;
+				padding-top: 4px;
 			}
 		}
 	
